@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH TRIETOOL-0.2 1 "DECEMBER 2008"
+.TH TRIETOOL 1 "DECEMBER 2008"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,11 +16,11 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-trietool-0.2 \- trie manipulation tool
+trietool \- trie manipulation tool
 .SH SYNOPSIS
-\fBtrietool-0.2\fP [ \fIoptions\fP ] \fItrie command arg\fP ...
+\fBtrietool\fP [ \fIoptions\fP ] \fItrie command arg\fP ...
 .SH DESCRIPTION
-\fBtrietool-0.2\fP is the command-line tool for manipulating double-array trie 
+\fBtrietool\fP is the command-line tool for manipulating double-array trie 
 data.  It can be used to query, add and remove words in a trie.
 .P
 .SS The Trie
